hphp/hack/test/typecheck/stdclass_strict.php.exp
File "stdclass_strict.php", line 9, characters 7-9:
Could not find member foo in an object of type stdClass (Typing[4053])
File "stdclass_strict.php", line 8, characters 8-21:
This is why I think it is an object of type stdClass
File "builtins.hhi", line 57, characters 13-20:
Declaration of stdClass is here
